--- a/app/src/main/res/layout/fragment_orders_item.xml
+++ b/app/src/main/res/layout/fragment_orders_item.xml
@@ -7,40 +7,33 @@
     android:orientation="vertical"
     android:tag="cards main container">
 
-    <ExpandableListView
-        android:id="@+id/expandableListView"
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardElevation="3dp"
+        card_view:contentPadding="5dp">
 
-    <!--<androidx.cardview.widget.CardView-->
-        <!--android:id="@+id/card_view"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_margin="5dp"-->
-        <!--card_view:cardElevation="3dp"-->
-        <!--card_view:contentPadding="5dp">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical">-->
+            <TextView
+                android:id="@+id/tv_orders_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                card_view:layout_constraintTop_toTopOf="parent"
+                card_view:layout_constraintVertical_bias="0.0" />
 
-            <!--<TextView-->
-                <!--android:id="@+id/tv_orders_number"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="TextView"-->
-                <!--card_view:layout_constraintBottom_toBottomOf="parent"-->
-                <!--card_view:layout_constraintStart_toStartOf="parent"-->
-                <!--card_view:layout_constraintTop_toTopOf="parent"-->
-                <!--card_view:layout_constraintVertical_bias="0.0" />-->
+        </LinearLayout>
 
-        <!--</LinearLayout>-->
-
-    <!--</androidx.cardview.widget.CardView>-->
+    </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
